[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "musiclang"
version = "0.8.6"
description = "A python package for music notation and generation"
readme = "README.md"
authors = [{ name = "Florian GARDIN", email = "fgardin.pro@gmail.com" }]
license = { file = "LICENSE.md" }
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["music", "ai", "notation"]
dependencies = [
    "lxml==4.9.1",
    "mido==1.2.10",
    "music21==8.1.0",
    "numpy==1.23.4",
    "pandas==1.5.1",
    "scikit-learn==1.1.3",
    "scipy==1.9.3",
    "tensorflow==2.11.0",
    "toml==0.10.2",
    "tomli==2.0.1",
    "xmlschema==2.1.1",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/MusicLang/musiclang"