[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "musiclang"
version = "0.20.0"
description = "A python package for music notation and generation"
readme = "README.md"
authors = [{ name = "Florian GARDIN", email = "fgardin.pro@gmail.com" }]
license = { file = "LICENSE.md" }
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["music", "ai", "notation"]
dependencies = [
    "lxml",
    "mido==1.2.10",
    "music21==8.1.0",
    "numpy",
    "pandas==1.5.3",
    "scikit-learn==1.1.3",
    "scipy",
    "tensorflow",
    "toml==0.10.2",
    "tomli==2.0.1",
    "xmlschema==2.1.1",
    "transformers==4.26.1",
    "tokenizers==0.13.2",
    "partitura==1.2.1",
    "torch",
    "miditok-for-musiclang==0.0.1"
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/MusicLang/musiclang"